// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > cjs 1`] = `undefined`;

exports[`index > cwd 1`] = `
{
  "content": [
    "./src/**/*.{html,js}",
  ],
  "theme": {
    "colors": {
      "blue": "#1fb6ff",
      "gray": "#8492a6",
      "gray-dark": "#273444",
      "gray-light": "#d3dce6",
      "green": "#13ce66",
      "orange": "#ff7849",
      "pink": "#ff49db",
      "purple": "#7e5bef",
      "yellow": "#ffc82c",
    },
    "extend": {
      "borderRadius": {
        "4xl": "2rem",
      },
      "spacing": {
        "8xl": "96rem",
        "9xl": "128rem",
      },
    },
    "fontFamily": {
      "sans": [
        "Graphik",
        "sans-serif",
      ],
      "serif": [
        "Merriweather",
        "serif",
      ],
    },
  },
}
`;

exports[`index > js 1`] = `
{
  "default": {
    "content": [
      "./src/**/*.{html,js}",
    ],
    "theme": {
      "colors": {
        "blue": "#1fb6ff",
        "gray": "#8492a6",
        "gray-dark": "#273444",
        "gray-light": "#d3dce6",
        "green": "#13ce66",
        "orange": "#ff7849",
        "pink": "#ff49db",
        "purple": "#7e5bef",
        "yellow": "#ffc82c",
      },
      "extend": {
        "borderRadius": {
          "4xl": "2rem",
        },
        "spacing": {
          "8xl": "96rem",
          "9xl": "128rem",
        },
      },
      "fontFamily": {
        "sans": [
          "Graphik",
          "sans-serif",
        ],
        "serif": [
          "Merriweather",
          "serif",
        ],
      },
    },
  },
}
`;

exports[`index > mjs 1`] = `
{
  "default": {
    "content": [
      "./src/**/*.{html,js}",
    ],
    "theme": {
      "colors": {
        "blue": "#1fb6ff",
        "gray": "#8492a6",
        "gray-dark": "#273444",
        "gray-light": "#d3dce6",
        "green": "#13ce66",
        "orange": "#ff7849",
        "pink": "#ff49db",
        "purple": "#7e5bef",
        "yellow": "#ffc82c",
      },
      "extend": {
        "borderRadius": {
          "4xl": "2rem",
        },
        "spacing": {
          "8xl": "96rem",
          "9xl": "128rem",
        },
      },
      "fontFamily": {
        "sans": [
          "Graphik",
          "sans-serif",
        ],
        "serif": [
          "Merriweather",
          "serif",
        ],
      },
    },
  },
}
`;

exports[`index > ts 1`] = `
{
  "default": {
    "content": [
      "./src/**/*.{html,js}",
    ],
    "theme": {
      "colors": {
        "blue": "#1fb6ff",
        "gray": "#8492a6",
        "gray-dark": "#273444",
        "gray-light": "#d3dce6",
        "green": "#13ce66",
        "orange": "#ff7849",
        "pink": "#ff49db",
        "purple": "#7e5bef",
        "yellow": "#ffc82c",
      },
      "extend": {
        "borderRadius": {
          "4xl": "2rem",
        },
        "spacing": {
          "8xl": "96rem",
          "9xl": "128rem",
        },
      },
      "fontFamily": {
        "sans": [
          "Graphik",
          "sans-serif",
        ],
        "serif": [
          "Merriweather",
          "serif",
        ],
      },
    },
  },
}
`;
